--- a/css/style.css
+++ b/css/style.css
@@ -414,10 +414,6 @@ section {
     padding: 3em 0;
 }
 
-.call-to-action {
-    padding: 0.5em 0 3em 0;
-}
-
 .section-title {
     color: rgba(168,203,180);
     font-family: kepler-std, serif;
@@ -582,8 +578,8 @@ section {
 
 /* FORMS */
 form {
-    max-width: 600px;
-    margin: 2em auto;
+    max-width: 790px;
+    margin: 2em auto 1em auto;
 }
 
 form label, 
@@ -612,10 +608,17 @@ form textarea {
     line-height: 1.5;
 }
 
+@media (min-width: 1650px) {
+    form textarea {
+        min-height: 20em;
+    }
+}
+
 form input[type="submit"] {
     margin-top: 1.5em;
     width: auto;
     cursor: pointer;
+    border: none;
 }
 
 /* FOR DEV PURPOSES ONLY */
@@ -628,3 +631,42 @@ form input[type="submit"] {
 img, svg, canvas, video {
     filter: contrast(0%);
 } */
+
+/* CUSTOM SITE CSS */
+.call-to-action {
+    padding: 0.5em 0 3em 0;
+}
+
+#gallery {
+    background-color: black;
+    padding: 5em 0 3em 0;
+    margin-bottom: 3em;
+}
+
+#gallery .section-title::after {
+    margin: 0 auto;
+    width: 3.3em;
+}
+
+#gallery .section-heading {
+    padding: 0.5em 0 1em 0;
+}
+
+#contact {
+    padding: 0em;
+}
+
+#contact .section-title::after {
+    margin: 0 auto;
+    width: 3.5em;
+}
+
+@media (min-width: 768px) {
+    .column.one-half.contact-info {
+        margin-top: 1.5em;
+    }
+}
+
+.column.one-half.contact-info p {
+    padding-bottom: 0.5em;
+}
