--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,7 @@ img {
     display: inline-block;
     text-align: center;
     border-radius: 1.15em;
+    font-weight: bold;
 }
 
 .button:hover, button:hover, form input[type="submit"]:hover {
@@ -347,7 +348,7 @@ body { margin: 0; }
 }
 
 .site-footer {
-    padding-bottom: 2em;
+    padding: 1em 0 2em 0;
 }
 
 @media (max-width: 499px) {
@@ -545,24 +546,27 @@ section {
 .swiper {
     --swiperlinkcolor: white;
     --swiperlinkcolorhover: black;
-    --swiperlinkbackground: rgba(255,255,255,0.3);
+    --swiperlinkbackground: rgba(255,255,255,1);
     width: 100%;
     height: auto;
-  }
-  
+}
+
 .swiper-button-next,
 .swiper-button-prev {
-    background-color: var(--swiperlinkbackground);
-    right:10px;
+    right: 10px;
     padding: 30px;
+    color: var(--swiperlinkcolor);
+}
+
+.swiper-button-next:hover,
+.swiper-button-prev:hover {
+    background-color: var(--swiperlinkbackground);
     color: var(--swiperlinkcolorhover);
-    fill: var(--swiperlinkcolorhover);
-    stroke: var(--swiperlinkcolorhover);
-  }
+}
   
 .swiper-pagination-bullet-active {
     background-color: var(--swiperlinkcolorhover);
-  }
+}
   
 .swiper img {
     display: block;
@@ -608,9 +612,39 @@ form textarea {
     line-height: 1.5;
 }
 
+@media (min-width: 768px) {
+    form textarea {
+        min-height: 7em;
+    }
+}
+
+@media (min-width: 1050px) {
+    form textarea {
+        min-height: 8.5em;
+    }
+}
+
+@media (min-width: 1250px) {
+    form textarea {
+        min-height: 10em;
+    }
+}
+
+@media (min-width: 1450px) {
+    form textarea {
+        min-height: 12.25em;
+    }
+}
+
 @media (min-width: 1650px) {
     form textarea {
-        min-height: 20em;
+        min-height: 16em;
+    }
+}
+
+@media (min-width: 1850px) {
+    form textarea {
+        min-height: 18.2em;
     }
 }
 
