--- a/css/style.css
+++ b/css/style.css
@@ -553,6 +553,7 @@ section {
     --swiperlinkcolor: white;
     --swiperlinkcolorhover: black;
     --swiperlinkbackground: rgba(255,255,255,1);
+    --swiper-navigation-size: 20px;
     width: 100%;
     height: auto;
 }
@@ -560,8 +561,9 @@ section {
 .swiper-button-next,
 .swiper-button-prev {
     right: 10px;
-    padding: 30px;
+    padding: 20px;
     color: var(--swiperlinkcolor);
+    size: var(--swiper-navigation-size);
 }
 
 .swiper-button-next:hover,
