--- a/css/style.css
+++ b/css/style.css
@@ -711,18 +711,6 @@ img, svg, canvas, video {
     background-position: center 55%;
 }
 
-.awards {
-    background-color: rgba(253,242,226,1);
-    box-shadow: 7px 7px #ededed;
-    border-radius: 25px;
-    padding: 3em;
-    margin-bottom: 2em;
-}
-
-.awards h3 {
-    color: rgba(235,190,175,1);
-}
-
 #gallery {
     padding: 5em 0 3em 0;
     margin-bottom: 3em;
@@ -760,6 +748,81 @@ img, svg, canvas, video {
 
 .column.one-half.contact-info p {
     padding-bottom: 0.5em;
+}
+
+/* AWARDS CSS */
+#awards-section {
+    /* padding-bottom: 1.5em; */
+    background-image: url("../img/awards_background.jpg");
+    background-size: cover;
+    background-position: center 55%;
+}
+
+.awards {
+    background-color: rgba(253,242,226,1);
+    box-shadow: 7px 7px #ededed;
+    border-radius: 25px;
+    padding: 3em;
+    margin-bottom: 2em;
+    max-width: 900px;
+}
+
+.awards h3 {
+    color: rgba(235,190,175,1);
+}
+
+.timeline-wrapper {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    min-height: 500px;
+}
+
+.awards-nav {
+    display: flex;
+    justify-content: center;
+}
+
+.awards-nav ul {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    list-style: none;
+}
+
+.awards-nav ul::after {
+    content: '';
+    position: absolute;
+    height: 1px;
+    width: 100%;
+    background-color: black;
+    top: 10px;
+}
+
+.awards-nav a {
+    position: relative;
+    display: block;
+    padding: 2em 1em 1em 1em;
+    color: black; 
+    text-decoration: none;
+}
+
+.awards-nav a::before {
+    content: '';
+    position: absolute;
+    top: 2px;
+    width: 15px;
+    height: 15px;
+    background-color: rgba(235,190,175,1);
+    border: solid 1px black;
+    border-radius: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 10;
+}
+
+.awards[data-currentaward='false'] {
+    display: none;
 }
 
 /* PRODUCT DETAILS CSS */
