--- a/css/style.css
+++ b/css/style.css
@@ -705,6 +705,12 @@ img, svg, canvas, video {
     padding: 0em;
 }
 
+@media (max-width: 768px) {
+    #gallery {
+        padding-bottom: 2em;
+    }
+}
+
 #gallery .section-title::after {
     margin: 0 auto;
     width: 3.3em;
@@ -777,6 +783,7 @@ img, svg, canvas, video {
     width: 100%;
     background-color: black;
     top: 10px;
+    right: 1px;
 }
 
 .awards-nav a {
@@ -785,6 +792,7 @@ img, svg, canvas, video {
     padding: 2em 1em 1em 1em;
     color: black; 
     text-decoration: none;
+    right: 22px;
 }
 
 .awards-nav a::before {
@@ -807,7 +815,13 @@ img, svg, canvas, video {
 
 /* PRODUCT DETAILS CSS */
 .product {
-    padding-top: 0em;
+    padding: 0em;
+}
+
+@media (max-width: 1049px) {
+    .product {
+        padding-bottom: 2em;
+    }
 }
 
 .product h2 {
